--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -3,13 +3,12 @@
     "Token": "secret key for jwt"
   },
   "Sql": {
-    "Cloud": "Server=tcp:wisecat-server.database.windows.net,1433;Initial Catalog=wisecat-test;Persist Security Info=False;User ID=wisecat;Password=wise15f15!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "Dev": "redis-master:6379,redis-slave:6379,password=wisecat15f15!",
+    "Cloud": "Server=tcp:thegido-sql.database.windows.net,1433;Initial Catalog=thegido-sql;Persist Security Info=False;User ID=thegido;Password=wisecat15f15!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "Local": "Server=(localdb)\\MSSQLLocalDB;Database=server;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Redis": {
     "Cloud": "redis-master:6379,redis-slave:6379,password=wisecat15f15!",
-    "Dev": "13.89.111.243:6379,password=wisecat15f15!",
+    "Dev": "40.82.156.52:6379,password=wisecat15f15!",
     "Local": "localhost:6379"
   },
   "MongodDB": {
